# sovereign-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.monitoring.yml  docker-compose.openwebui.yml  docker-compose.vllm.yml  docker-compose.yml  pyproject.toml
benchmarks/: README.md  vllm_benchmark.sh
litellm/: config.yaml
monitoring/: prometheus-local.yaml  prometheus.yaml
monitoring/grafana/provisioning/dashboards/: litellm-dashboard.json  vllm-dashboard.json  vllm.yaml
src/sovereign-ai/: main.py
src/sovereign_ai/: test_litellm.py  test_vllm.py
