[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_ai"]

[dependency-groups]
benchmark = [
    "vllm>=0.12.0",
]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
]
